# whc

./: .gitignore  .gitmodules  LICENSE.txt  README.md
docker/ashe/: README.md  run_ashe.sh
docker/toa/: .gitignore  Dockerfile  README.md  run_toa.sh
docker/wagahigh/: .gitignore  Dockerfile  README.md  run_wagahigh.sh
rust/: .gitignore
rust/.cargo/: config
rust/toa/: BuildAndRun.ps1  Cargo.toml  CopyBin.ps1
rust/toa/src/: future_helper.rs  lib.rs  main.rs  sigint_helper.rs
rust/toa/src/wagahigh/: mod.rs  process.rs  windows_helper.rs
src/: NuGet.config  WagahighChoices.sln
src/Ashe/: Ashe.csproj  ConsoleSearchDirector.cs  CursorGlyph.cs  CursorPosition.cs  DockerBuild.cmd  GrpcRemoteSearchDirector.cs  Logger.cs  Program.cs  SearchAgent.cs
src/Ashe.Contract/: Ashe.Contract.csproj  ChoiceAction.cs  GrpcAsheServer.cs  GrpcAsheServerContract.cs  Heroine.cs  IAsheMagicOnionService.cs  SearchDirector.cs  SeekDirectionResult.cs  SelectionInfo.cs
src/Blockhash/: Blockhash.cs  Blockhash.csproj  IInputImage.cs  Pixel.cs  RestrictedBinaryHeap.cs
src/Blockhash.Cli/: Blockhash.Cli.csproj  Program.cs  Rgba32InputImage.cs
src/GrpcUtils/: Bgra32ImageFormatter.cs  Bgra32ImageFromMessagePack.cs  DependencyInjectionFilterAttribute.cs  GrpcUtils.csproj  SizeFormatter.cs  WhcFormatterResolver.cs  WhcGrpcServer.cs
src/Kaoruko/: .gitignore  DatabaseActivator.cs  Kaoruko.csproj  Program.cs  SearchStatusRepository.cs  Startup.cs  WebStartup.cs
src/Mihiro/: App.xaml  App.xaml.cs  Bgr2432InputImage.cs  BindingModelBase.cs  MainWindow.xaml  MainWindow.xaml.cs  (+3 more)
(+123 files in other folders)
