[package]
name = "toa"
version = "0.1.0"
authors = ["azyobuzin <azyobuzin@users.sourceforge.jp>"]
description = "ワガママハイスペック ウィンドウ操作サービス"
publish = false

[dependencies]
clap = "2.26.0"
ctrlc = "3.0.2"
futures = "0.1.15"
gdi32-sys = "0.2.0"
kernel32-sys = "0.2.2"
tokio-core = "0.1.9"
user32-sys = "0.2.0"
void = "1.0.2"
winapi = "0.2.8"

[patch.crates-io]
miow = { path = "../miow" }
